commit before berufsschule, selvemade athentication

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -77,6 +77,11 @@
             <!-- <version>5.1.40</version>  Hat ver ändert -->
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
     </dependencies>
 
     <build>
