--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/robotDB?useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.url=jdbc:mysql://localhost:3306/robotDB?useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+# new 
+
 
 spring.datasource.username= root
 spring.datasource.password= 12345678
